feat: merge authentication system from old version to EVRental
- Merged JWT authentication system from BE/src/ to BE/EVRental/
- Added complete authentication flow with login/logout
- Integrated Spring Security configuration
- Added DTOs for login request/response
- Implemented JWT token generation and validation
- Added protected endpoints with authentication
- Updated entity table names with [table] syntax for SQL Server
- Removed duplicate code from old version (BE/src/)
- Consolidated to single unified codebase in BE/EVRental/

All endpoints tested and working:
- GET /hello - basic endpoint
- POST /auth/login - authentication
- GET /user/profile - protected endpoint with JWT