@@ -1,4 +1,4 @@
-package com.daiduong.basic.evrental.config;
+package vn.swp391.fa2025.evrental.config;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -12,8 +12,11 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.List;
+import java.util.Arrays;
 
+/**
+ * Spring Security Configuration for JWT-based authentication
+ */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -37,22 +40,14 @@ public class SecurityConfig {
         return http.build();
     }
 
-    /**
-     * CORS configuration - Allow all origins for development
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Allow all origins - simplest for development
-        configuration.setAllowedOrigins(List.of("*"));
-
-        // Allow common HTTP methods
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        // Allow all headers
-        configuration.setAllowedHeaders(List.of("*"));
-
+        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowCredentials(true);
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
